# DevCommit

./: .dcommit.example  .gitignore  README.md  devcommit.logs  devcommit.py  gicommits.py  inquire.py  main.py  pract.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
debian/: changelog  control  install  postinst  rules
devcommit/: main.py
devcommit/app/: ai_providers.py  gemini_ai.py
devcommit/utils/: git.py  parser.py
scripts/: create_dcommit.py
src/: __init__.py
src/app/: gemini_ai.py  prompt.py
src/utils/: parser.py
